--- a/docs/team/kyzure.adoc
+++ b/docs/team/kyzure.adoc
@@ -19,8 +19,8 @@ Tasked to enhance or morph a simple command line interface (CLI) desktop address
 
 Here is a screenshot of **Horo**:
 
-.Screenshot of Horo
-image::Ui.png[]
+.Screenshot of Horo's Graphical User Interface
+image::HoroMainViewDescription.png[]
 
 I played the role of designing the User Interface (UI) and the logic of how my teammates' code will interact with the UI. The following sections below will display the following morphing I did in detail, including certain documentation added to the User and Developer Guide.
 
