--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -158,16 +158,20 @@ A pop-up dialog box will display a URL link to a help document.
 
 Displays a full list of all tags currently in StudyBuddyPro.
 
-    Format: taglist
+```
+Format: taglist
+```
 
-    Expected output:
-    Here are all the tags in StudyBuddyPro.
-    Listing all tags :
-    [cs2100] |  flashcards : 0 notes : 3 cheatsheets : 1
-    [cs2101] |  flashcards : 6 notes : 2 cheatsheets : 1
-    [cs2104] |  flashcards : 20 notes : 8 cheatsheets : 3
-    [math] |  flashcards : 10 notes : 2 cheatsheets : 1
-    [pipelining] |  flashcards : 1 notes : 5 cheatsheets : 2
+Expected output:
+```
+Here are all the tags in StudyBuddyPro.
+Listing all tags :
+[cs2100] |  flashcards : 0 notes : 3 cheatsheets : 1
+[cs2101] |  flashcards : 6 notes : 2 cheatsheets : 1
+[cs2104] |  flashcards : 20 notes : 8 cheatsheets : 3
+[math] |  flashcards : 10 notes : 2 cheatsheets : 1
+[pipelining] |  flashcards : 1 notes : 5 cheatsheets : 2
+```
 
 * The user can make use of taglist, to quickly see which tag they would like to view.
 
@@ -187,27 +191,30 @@ Lists all StudyBuddyPro items with matching tags in the application.
 
     Example usage: filterall tag/CS2100
 
-    Expected output:
-        Lists the whole StudyBuddyPro after filtering by tag(s) :
+Expected output:
+
+```
+Listing the whole StudyBuddyPro after filtering by tag(s) :
     CS2100
-    Flashcard: 6.
-        Question: What is 101 Binary in its Decimal form?
-        Answer: 5
-        Title: BinaryQn
-        Tags: [cs2100]
-    CheatSheet: 7.
-        Title: cs2100 stuff
-        Tags: [cs2100]
-        Contents: [ 1. Pipelining is a process where a processor executes multiple processes simultaneously.]
-            [ 2. Question: What is 101 Binary in its Decimal form?; Answer: 5 ]
-    Note: 5.
-        Title: Pipelining Definition
-        Content: Pipelining is a process where a processor executes multiple processes simultaneously.
-        Tags: [cs2100]
-    Note Fragment: 6-2.
-        Title: About Notes
-        Content: highlighted
-        Tags: [cs2100]
+Flashcard: 6.
+    Question: What is 101 Binary in its Decimal form?
+    Answer: 5
+    Title: BinaryQn
+    Tags: [cs2100]
+CheatSheet: 7.
+    Title: cs2100 stuff
+    Tags: [cs2100]
+    Contents: [ 1. Pipelining is a process where a processor executes multiple processes simultaneously.]
+        [ 2. Question: What is 101 Binary in its Decimal form?; Answer: 5 ]
+Note: 5.
+    Title: Pipelining Definition
+    Content: Pipelining is a process where a processor executes multiple processes simultaneously.
+    Tags: [cs2100]
+Note Fragment: 6-2.
+    Title: About Notes
+    Content: highlighted
+    Tags: [cs2100]
+```
 
 NOTE: 'Note Fragments' (as seen in the example above) are described further in the Notes section (see Section 6.1).
 
@@ -228,29 +235,37 @@ or overdue flashcards to revise before exiting the application.
 
 If there are flashcards due for revision today but no overdue flashcards:
 
-    Expected output: Are you sure you want to exit? You still have the following flashcards overdue or left
-    to revise for today:
-    Here are the flashcards due today:
-    1. Math Question 1 - What is 2 x 2?
-    Type 'exit' again to exit the application!
+Expected output:
+```
+Are you sure you want to exit? You still have the following flashcards overdue or left
+to revise for today:
+Here are the flashcards due today:
+1. Math Question 1 - What is 2 x 2?
+Type 'exit' again to exit the application!
+```
 
 If there are no flashcards due for revision today but there are overdue flashcards:
 
-    Expected output: Are you sure you want to exit? You still have the following flashcards overdue or left
-    to revise for today:
-    Here are your overdue flashcards:
-    1. Math Question 1 - What is 2 x 2? (Was due on 2019-10-30)
-    Type 'exit' again to exit the application!
-
+Expected output:
+```
+Are you sure you want to exit? You still have the following flashcards overdue or left
+to revise for today:
+Here are your overdue flashcards:
+1. Math Question 1 - What is 2 x 2? (Was due on 2019-10-30)
+Type 'exit' again to exit the application!
+```
 If there are both flashcards due for revision today and overdue flashcards:
 
-    Expected output: Are you sure you want to exit? You still have the following flashcards overdue or left
-    to revise for today:
-    Here are the flashcards due today:
-    1. Math Question 1 - What is 2 x 2?
-    Here are your overdue flashcards:
-    1. Math Question 2 - What is 3 x 2? (Was due on 2019-10-30)
-    Type 'exit' again to exit the application!
+Expected output:
+```
+Are you sure you want to exit? You still have the following flashcards overdue or left
+to revise for today:
+Here are the flashcards due today:
+1. Math Question 1 - What is 2 x 2?
+Here are your overdue flashcards:
+1. Math Question 2 - What is 3 x 2? (Was due on 2019-10-30)
+Type 'exit' again to exit the application!
+```
 
 After any of the 3 scenarios above user can override the warning by entering the `exit` command again.
 
@@ -264,9 +279,11 @@ Edits a tag by the specified index.
 
     Example usage: edit tag/midterm tag/finals
 
-    Expected output:
-    Tag editted!
-    All items and contents in StudyBuddy tagged ‘midterm’ is replaced with tag ‘finals’.
+Expected output:
+```
+Tag edited!
+All items and contents in StudyBuddy tagged ‘midterm’ is replaced with tag ‘finals’.
+```
 
 Allows the user to easily modify the tags of all the items. For instance, if every item that is marked difficult does not appear hard to you
 anymore, you could replace all items tagged 'difficult' with a tag 'moderate'.
@@ -281,12 +298,15 @@ Adds a flashcard from user input question <QUESTION> and answer <ANSWER>.
 
     Example usage: add q/What is 100 Binary in its Decimal form? a/4 t/Binary Stuff tag/CS2100
 
-    Expected output: New flashcard added:
-        Title: Binary Stuff
-        Statictics: This flashcard was last viewed on: 2019-11-01. This flashcard should next be viewed on 2019-11-02 for optimum revision!
-        Question: What is 100 Binary in its Decimal form?
-        Answer: 4
-        Tags: [cs2100]
+Expected output:
+```
+New flashcard added:
+    Title: Binary Stuff
+    Statictics: This flashcard was last viewed on: 2019-11-01. This flashcard should next be viewed on 2019-11-02 for optimum revision!
+    Question: What is 100 Binary in its Decimal form?
+    Answer: 4
+    Tags: [cs2100]
+```
 
 === Viewing a flashcard: `view`
 
@@ -296,10 +316,13 @@ Displays flashcard <FLASHCARD_INDEX> to user without answer.
 
     Example usage: view 6
 
-    Expected output: Viewing flashcard:
-        Title: BinaryQn
-        Question: What is 101 Binary in its Decimal form?
-        Tags: [cs2100]
+Expected output:
+```
+Viewing flashcard:
+    Title: BinaryQn
+    Question: What is 101 Binary in its Decimal form?
+    Tags: [cs2100]
+```
 
 === Revealing a flashcard's answer: `show`
 
@@ -309,7 +332,10 @@ Displays the answer of the flashcard currently loaded.
 
     Example usage: show
 
-    Expected output: Flashcard answer loaded
+Expected output:
+```
+Flashcard answer loaded
+```
 
 === Editing a flashcard: `edit`
 
@@ -329,12 +355,15 @@ Lists all flashcards.
 
    Format: list
 
-    Expected output: Listed all flashcards:
+Expected output:
+```
+Listed all flashcards:
     Question: What is my name?
     Answer: Sahil
     Title: Test Name Question 1
     Statistics: This flashcard was last viewed on: 2019-10-29. This flashcard should next be viewed on 2019-10-30 for optimum revision!
     Tags: [pop]
+```
 
 === Deleting a flashcard: `delete`
 
@@ -346,22 +375,28 @@ The user will be prompted once to confirm their deletion.
 
     Example usage: delete 6
 
-    Expected output: Are you sure you would like to delete the following flashcard?
-	    Question: What is 101 Binary in its Decimal form?
-	    Answer: 5
-	    Title: BinaryQn
-	    Statistics: This flashcard was last viewed on: 2019-10-31. This flashcard should next be viewed on 2019-11-01 for optimum revision!
-	    Tags: [cs2100]
-        Please use `delete 6` again to confirm your deletion..
+Expected output:
+```
+Are you sure you would like to delete the following flashcard?
+    Question: What is 101 Binary in its Decimal form?
+    Answer: 5
+    Title: BinaryQn
+    Statistics: This flashcard was last viewed on: 2019-10-31. This flashcard should next be viewed on 2019-11-01 for optimum revision!
+    Tags: [cs2100]
+    Please use `delete 6` again to confirm your deletion..
+```
 
 Upon hitting enter, the flashcard will be deleted.
 
-    Expected output: Deleted Flashcard:
-        Question: What is 101 Binary in its Decimal form?
-        Answer: 5
-        Title: BinaryQn
-        Statistics: This flashcard was last viewed on: 2019-10-31. This flashcard should next be viewed on 2019-11-01 for optimum revision!
-        Tags: [cs2100]
+Expected output:
+```
+Deleted Flashcard:
+    Question: What is 101 Binary in its Decimal form?
+    Answer: 5
+    Title: BinaryQn
+    Statistics: This flashcard was last viewed on: 2019-10-31. This flashcard should next be viewed on 2019-11-01 for optimum revision!
+    Tags: [cs2100]
+```
 
 === Time Trial: `timetrial`
 
@@ -371,7 +406,10 @@ Starts a time trial for flashcards with tag <TAG> for <TIME> seconds per flashca
 
     Example usage: timetrial cs2103tuml hard
 
-    Expected output: Time trial started
+Expected output:
+```
+Time trial started
+```
 
 * At least one tag must be specified.
 * If more than one tag is specified, selects all flashcards that contains all of the specified tags.
@@ -416,24 +454,36 @@ date for the next viewing of all flashcards can be viewed under the `list` comma
 
 If no flashcards due for revision today and no overdue flashcards:
 
-    Expected output: Well done - No due or overdue flashcards!
+Expected output:
+```
+Well done - No due or overdue flashcards!
+```
 
 If there are flashcards due for revision today but no overdue flashcards:
 
-    Expected output: Here are the flashcards due today:
-    1. Math Question 1 - What is 2 x 2?
+Expected output:
+```
+Here are the flashcards due today:
+1. Math Question 1 - What is 2 x 2?
+```
 
 If there are no flashcards due for revision today but there are overdue flashcards:
 
-    Expected output: Here are your overdue flashcards:
-    1. Math Question 1 - What is 2 x 2? (Was due on 2019-10-30)
+Expected output:
+```
+Here are your overdue flashcards:
+1. Math Question 1 - What is 2 x 2? (Was due on 2019-10-30)
+```
 
 If there are both flashcards due for revision today and overdue flashcards:
 
-    Expected output: Here are the flashcards due today:
-    1. Math Question 1 - What is 2 x 2?
-    Here are your overdue flashcards:
-    1. Math Question 2 - What is 3 x 2? (Was due on 2019-10-30)
+Expected output:
+```
+Here are the flashcards due today:
+1. Math Question 1 - What is 2 x 2?
+Here are your overdue flashcards:
+1. Math Question 2 - What is 3 x 2? (Was due on 2019-10-30)
+```
 
 == Notes Feature:
 
@@ -450,9 +500,8 @@ Format: add t/TITLE c/CONTENT [tag/TAG]...
 Example usage: add t/Pipelining Definition c/Pipelining is a process where a processor executes multiple processes simultaneously. tag/cs2100
 ```
 
-```
 Expected output:
-
+```
 New note added:
     Title: Pipelining Definition
     Content: Pipelining is a process where a processor executes multiple processes simultaneously.
@@ -483,8 +532,8 @@ still be added). StudyBuddyPro will assume that the user has typed the tags corr
 Example usage: add t/About Notes c/Notes can be /* C/highlighted TAG/highlight TAG/important */ if needed. tag/about
 ```
 
-```
 Expected output:
+```
 
 New note added:
 	Title: About Notes
@@ -527,8 +576,8 @@ Format: delete (index)
 Example usage: delete 3
 ```
 
-```
 Expected output:
+```
 
 Are you sure you would like to delete the following note?
 
@@ -561,8 +610,8 @@ Format: view (index)
 Example usage: view 3
 ```
 
-```
 Expected output:
+```
 
 Viewing note:
     Title: About Notes
@@ -582,8 +631,8 @@ Format: viewraw (index)
 Example usage: viewraw 3
 ```
 
-```
 Expected output:
+```
 
 Viewing raw note:
     Title: About Notes
@@ -599,8 +648,8 @@ Viewing raw note:
 Format: list
 ```
 
-```
 Expected output:
+```
 
 a complete list of all notes currently in StudyBuddyPro
 ```
@@ -668,8 +717,8 @@ Format: edit ORIGINAL_TITLE [t/TITLE] [c/CONTENT] [tag/TAG]...
 Example usage: edit Pipelining Definition t/Pipelined Definition tag/cs2100finals
 ```
 
-```
 Expected output:
+```
 
 Edited Note:
     Title: Pipelined Definition
@@ -702,11 +751,12 @@ Assuming that there is a flashcard object with the tag "cs2100midterm"
 ====
 
 Expected output:
-
-    New cheatsheet added:
-    Title: CS2100 Midterm CheatSheet
-    Tags: [cs2100midterm]
-    1 content(s) have been successfully generated from the other modes.
+```
+New cheatsheet added:
+Title: CS2100 Midterm CheatSheet
+Tags: [cs2100midterm]
+1 content(s) have been successfully generated from the other modes.
+```
 
 end::cheatsheetAdd[]
 tag::cheatsheetEdit[]
@@ -736,16 +786,17 @@ Example usage:
     edit 8 t/cs2100 final cheatsheet tag/formula
 
 Expected output:
+```
+Edited Cheatsheet:
+Title: cs2100 final cheatsheet
+Tags: [cs2100finals]
+Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
+```
 
 [NOTE]
 ====
 The actual implementation does not show the contents in the feedback box. Please do use `view` command to view them!
 ====
-
-    Edited Cheatsheet:
-    Title: cs2100 final cheatsheet
-    Tags: [cs2100finals]
-    Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
 
 end::cheatsheetEdit[]
 
@@ -759,19 +810,24 @@ The user will be prompted once to confirm their deletion.
 
     Example usage: delete 8
 
-    Expected output:
-        Are you sure you would like to delete the following cheatsheet?
-        Title: CS2100 Finals CheatSheet Tags: [finalcheatsheet]
-        Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
-            [ 2. 110 in Binary is 6 is Decimal ]
-        Please use `delete 8` again to confirm your deletion.
+Expected output:
+```
+    Are you sure you would like to delete the following cheatsheet?
+    Title: CS2100 Finals CheatSheet Tags: [finalcheatsheet]
+    Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
+        [ 2. 110 in Binary is 6 is Decimal ]
+    Please use `delete 8` again to confirm your deletion.
+```
 
 Upon hitting enter, the specified cheatsheet will be deleted.
 
-    Expected output: Deleted Cheatsheet:
-        Title: CS2100 Finals CheatSheet Tags: [finalcheatsheet]
-        Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
-            [ 2. 110 in Binary is 6 is Decimal ]
+Expected output:
+```
+Deleted Cheatsheet:
+    Title: CS2100 Finals CheatSheet Tags: [finalcheatsheet]
+    Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
+        [ 2. 110 in Binary is 6 is Decimal ]
+```
 
 tag::cheatsheetView[]
 
@@ -820,16 +876,15 @@ Example usage:
 
 Expected output:
 
-[NOTE]
-====
-Currently, cheatsheets only allow contents that match all the specified tags. Hence, `show` command will only show color toggling at the tags segment at the moment.
-====
-
 .Screenshot for `show 1` expected output
 image::jasmineDiagrams/ssForViewSpecificUG.png[]
 
 The above screenshot shows the cheatsheet's content with tag index 1 in the GUI of StudyBuddyPro.
 
+[NOTE]
+====
+Currently, cheatsheets only allow contents that match all the specified tags. Hence, `show` command will only show color toggling at the tags segment at the moment.
+====
 
 end::cheatsheetViewSpecific[]
 
@@ -889,34 +944,36 @@ Example usage 1:
     update 8
 
 Expected output:
+```
+Updated Cheatsheet:
+Title: cs2100 final cheatsheet
+Tags: [cs2100finals]
+Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
+              [ 2. Binary is in bits of 1 and 0.]
+```
 
 [NOTE]
 ====
 The actual implementation does not show the contents in the feedback box. Please do use `view` command to view them!
 ====
 
-    Updated Cheatsheet:
-    Title: cs2100 final cheatsheet
-    Tags: [cs2100finals]
-    Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
-              [ 2. Binary is in bits of 1 and 0.]
 
 Example usage 2:
 
     update 8 tag/formula
 
 Expected output:
-
+```
+Updated Cheatsheet:
+Title: cs2100 final cheatsheet
+Tags: [cs2100finals][formula]
+Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
+            [ 2. 10 + 10 = 20]
+```
 [NOTE]
 ====
 The actual implementation does not show the contents in the feedback box. Please do use `view` command to view them!
 ====
-
-    Updated Cheatsheet:
-    Title: cs2100 final cheatsheet
-    Tags: [cs2100finals][formula]
-    Contents: [ 1. Question: What is 110 Binary in its Decimal Form?; Answer: 6 ]
-              [ 2. 10 + 10 = 20]
 
 end::cheatsheetUpdate[]
 
